cpp_compiler/grammar.txt
expr: term exprP
exprP: '+' term exprP
    | '-' term exprP
    | e
term: factor termP
termP: '*' factor termP
    |  '/' factor termP
    | e
factor: NUMBER | '(' exp ')'


--------------------------------------------|--------------------
Rule                       |     First      |   Follow
--------------------------------------------|--------------------
exp: term1 exp1            | NUMBER,        | $, ')'
                           |  '('           |
--------------------------------------------|-------------------
exp1: '+' term1 exp1       | '+', '-',      | $, ')'
    | '-' term1 exp1       |  e             |
    | e                    |                |
--------------------------------------------|--------------------
term1: low term2           | id, '('        | +,-, $
                           |                |
-------------------------------------------------------------
term2: '*' low term2       | '*','/',       | '+','-', $, ')'
    |  '/' low term2       |  e             |
    |  e                   |                |
--------------------------------------------|-----------------
low: NUMBER | '(' exp ')'  | NUMBER,        | '*','/',
                           | '('            | '+','-',$,')'
--------------------------------------------|---------------
